День 8 Подправил, осталось 2 запроса